delete sticky col

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       </section>
 
       <!-- TABEL DAFTAR MURID -->
-      <section class="table-container" style="display: none">
+      <section class="table-container">
         <h2>Daftar Murid MEC KGM dan MEC KLT</h2>
 
         <div class="table-wrapper">
           <table class="table-content">
             <thead>
               <tr>
-                <th class="sticky-col">Nama</th>
+                <th>Nama</th>
                 <th>Kelas</th>
                 <th>Level</th>
                 <th>Cabang</th>
