--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <table class="table-content">
             <thead>
               <tr>
-                <th>Nama</th>
+                <th class="sticky-col">Nama</th>
                 <th>Kelas</th>
                 <th>Level</th>
                 <th>Cabang</th>
