fix the modal edit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class="wrapper">
       <!-- FORM TAMBAH MURID -->
-      <section class="container">
+      <section class="container" style="display: none">
         <h2>Tambah Data Murid</h2>
         <input type="text" id="nama" placeholder="Nama" />
         <input type="text" id="kelas" placeholder="Kelas" />
@@ -158,7 +158,7 @@
 
       <div id="modalEditMurid" class="modal hidden">
         <div class="modal-content">
-          <h3>Edit Data Murid</h3>
+          <h3 class="h3-modal">Edit Data Murid</h3>
           <input
             type="text"
             class="modal-text"
