--- a/index.html
+++ b/index.html
@@ -192,6 +192,14 @@
         />
         <div id="hasilNilai" class="hasil-cari"></div>
       </section>
+
+      <footer class="footer">
+        <p>
+          &copy; 2025 Rahmat Dimas Syahputra. All rights reserved until April
+          30, 2025.
+        </p>
+      </footer>
+
       <!-- Modal Edit Murid -->
 
       <div id="modalEditMurid" class="modal hidden">
