modified code and feature

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <th>Listening</th>
                 <th>Writing</th>
                 <th>Speaking</th>
+                <th>Matematika</th>
                 <th>Aksi</th>
               </tr>
             </thead>
@@ -246,6 +247,9 @@
           </select>
           <select id="editSpeaking">
             <option value="">Speaking</option>
+          </select>
+          <select id="editMatematika">
+            <option value="">Matematika</option>
           </select>
 
           <div class="form-buttons">
