--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h1>404</h1>
-      <p>Halaman ini sedang dalam perbaikan.</p>
+      <p>Aplikasi ini sedang dalam perbaikan.</p>
       <p>Silakan kembali lagi nanti.</p>
     </div>
   </body>
