--- a/404.html
+++ b/404.html
@@ -9,8 +9,8 @@
   <body>
     <div class="container">
       <h1>404</h1>
-      <p>Aplikasi ini sedang dalam perbaikan.</p>
-      <p>Silakan kembali lagi nanti.</p>
+      <p>Aplikasi ini sedang dalam keadaan nonaktif.</p>
+      <p>Silakan kembali lagi nanti pada pukul 15.00 - 19.45.</p>
     </div>
   </body>
 </html>
