fix it fitur export nilai ke bavic dua cabang

--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@
         <button id="btnExportNilai" class="btn-simpan">
           ⬇️ Export Nilai ke Excel
         </button>
-        <button id="exportReadingToSheet">⬆️ Export Reading ke BAVIC</button>
+        <button id="exportReadingKGM" class="btn-simpan">
+          ⬆️ Export Nilai MEC KGM
+        </button>
+        <button id="exportReadingKLT" class="btn-simpan">
+          ⬆️ Export Nilai MEC KLT
+        </button>
 
         <div class="table-wrapper">
           <table>
