tambah tombol export nilai matematika dan edit css tombolnya

--- a/index.html
+++ b/index.html
@@ -70,11 +70,17 @@
         <button id="btnExportNilai" class="btn-simpan">
           ⬇️ Export Nilai ke Excel
         </button>
-        <button id="exportReadingKGM" class="btn-simpan">
-          ⬆️ Export Nilai MEC KGM
+        <button id="exportNilaiInggrisKGM" class="btn-simpan">
+          ⬆️ Export Nilai Inggris MEC KGM
         </button>
-        <button id="exportReadingKLT" class="btn-simpan">
-          ⬆️ Export Nilai MEC KLT
+        <button id="exportNilaiInggrisKLT" class="btn-simpan">
+          ⬆️ Export Nilai Inggris MEC KLT
+        </button>
+        <button id="exportNilaiMatKGM" class="btn-simpan">
+          ⬆️ Export Nilai Mat MEC KGM
+        </button>
+        <button id="exportNilaiMatKLT" class="btn-simpan">
+          ⬆️ Export Nilai Mat MEC KLT
         </button>
 
         <div class="table-wrapper">
